re PR c++/13657 (Error message incorrectly describes return type as argument type)

/cp
2011-10-19  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/13657
	* class.c (instantiate_type): Fix error message.

/testsuite
2011-10-19  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/13657
	* g++.dg/parse/error42.C: New.
	* g++.old-deja/g++.other/ptrmem7.C: Tweak dg-errors.

From-SVN: r180228